Style overhaul part 1, markup tweaks, and label rephrasing

--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html>
 <head>
     <title>Gif Stitch</title>
+    <link href='http://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div id="input-form"></div>
-    <div class="gif-list" id="gifs"></div>
+	<div class="page-top">
+		<header class="main-header">
+			<div class="wrapper">
+				<h1 class="page-title">Gif Stitch</h1>
+			</div>
+		</header>
+		<div id="input-form" class="interface wrapper"></div>
+	</div>
+	<div class="gif-list">
+		<div class="wrapper" id="gifs"></div>
+	</div>
     <script src="js/lib/require.js" data-main="js/main"></script>
 </body>
 </html>
